--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "travel-paq/packages-api",
+    "name": "travel-paq/packages-api-metasearch",
     "type": "library",
     "homepage": "https://github.com/travelpaq/Connect-SDK-PHP",
     "license": "MIT",
